# Scales-Chroma

./: .gitignore  README.md  项目进度.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  compositions.py  practice_records.py  progression.py  sandbox.py
backend/app/core/: auth.py  database.py
backend/app/models/: __init__.py  auth_token.py  exp_statistics.py  practice_record.py  saved_composition.py  theory_visual_mapping.py  unlocked_effect.py  user.py
backend/app/schemas/: __init__.py  practice_record.py  sandbox.py  theory.py  user.py
backend/app/services/: exp_system.py  heatmap.py  leveling.py  practice_records.py  skill_tree.py  topic_matching.py  unlocks.py  user_effects.py  visual_engine.py
backend/app/tests/api/: test_auth_routes.py  test_compositions.py  test_cors.py  test_frontend_serving.py  test_practice_records.py  test_progression_routes.py  test_sandbox_routes.py
backend/app/tests/integration/: test_database_init.py  test_heatmap_yearly.py  test_practice_record_persistence.py  test_skill_tree_progression.py  test_visual_unlocks.py
backend/app/tests/unit/: test_database_models.py  test_exp_service.py  test_schemas.py  test_visual_engine_components.py
backend/app/visual_engine/: __init__.py  animation_controller.py  color_mapper.py  geometry_generator.py  particle_system.py  profile_library.py  renderer.py  tension_analyzer.py  types.py
docs/: development-testing-log.md  er-design.md  testing-strategy.md
frontend/: index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.tsx  (+2 more)
(+51 files in other folders)
