[project]
name = "scales-chroma-backend"
version = "0.1.0"
description = "FastAPI backend for Scales & Chroma."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "pydantic>=2.7.0",
    "email-validator>=2.2.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
addopts = "-ra"
